feat: swager uploads
