# controllers/authControllers/me.js
@@ -1,0 +1,4 @@
+export const me = async (req, res, next) => {
+  const { email, theme, avatarURL, name, _id } = req.user;
+  res.json({ _id, name, email, avatarURL, theme });
+};
