# controllers/authControllers/refresh.js
@@ -1,5 +1,4 @@
 export const refresh = async (req, res, next) => {
-  const { email, theme, avatarURL, name } = req.user;
-
-  res.json({ email, theme, avatarURL, name });
+  const { token } = req.user;
+  res.json({ accessToken: token });
 };
